--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     height: 60px;
     background-color: #0f1111;
     color: white;
+    display: flex;
 }
 .nav-logo{
     height:50px;
@@ -17,4 +18,10 @@
     height: 50px;
     background-size: cover;
     width: 100%;
+}
+.border{
+    border: 1.5px solid transparent;
+}
+.border:hover{
+    border: 1.5px solid white;
 }
