--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     background-color: #0f1111;
     color: white;
     display: flex;
+    align-items: center;
 }
 .nav-logo{
     height:50px;
@@ -24,4 +25,18 @@
 }
 .border:hover{
     border: 1.5px solid white;
+}
+/** box2**/
+.add-first{
+    color: #cccccc;
+    font-size: 0.85rem;
+    margin-left: 15px;
+}
+.add-sec{
+    font-size: 1rem;
+    margin-left: 3px;
+}
+.add-icon{
+   display: flex;
+   align-items: center; 
 }
