--- a/style.css
+++ b/style.css
@@ -74,3 +74,14 @@
     border-bottom-right-radius: 4px;
     color:#0f1111;
 }
+.nav-search:hover{
+    border: 2px solid orange;
+}
+/** box4**/
+span{
+    font-size: 0.7rem;
+}
+.nav-second{
+    font-size: 0.85rem;
+    font-weight: 700;
+}
