--- a/style.css
+++ b/style.css
@@ -85,3 +85,11 @@ span{
     font-size: 0.85rem;
     font-weight: 700;
 }
+/** box6 **/
+.nav-cart i{
+    font-size: 30px;
+}
+.nav-cart{
+    font-size: 0.85rem;
+    font-weight: 700;
+}
