--- a/style.css
+++ b/style.css
@@ -93,3 +93,16 @@ span{
     font-size: 0.85rem;
     font-weight: 700;
 }
+
+/**panel**/
+.panel{
+    height: 40px;
+    background-color: #222f3d;
+    display: flex;
+    color: white;
+    align-items: center;
+    justify-content: space-evenly;;
+}
+.panel-ops p{
+    display: inline;
+}
