--- a/style.css
+++ b/style.css
@@ -105,4 +105,13 @@ span{
 }
 .panel-ops p{
     display: inline;
+    margin-left: 15px;
+}
+.panel-ops{
+    width:70%;
+    font-size: 0.85rem;
+}
+.pnael-deals{
+    font-size: 0.9rem;
+    font-weight: 700;
 }
