Update CSS File

--- a/style.css
+++ b/style.css
@@ -118,6 +118,11 @@ span{
 /**hero-section**/
 .hero-section{
     background-image: url("hero_image.jpg");
-    height:600px;
+    height: 100vh;
     background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
