--- a/style.css
+++ b/style.css
@@ -118,12 +118,27 @@ span{
 /**hero-section**/
 .hero-section{
     background-image: url("hero_image.jpg");
-    height: 600px;
+    height: 350px;
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .hero-message{
     background-color: white;
     color: black;
     height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.85rem;
+    bottom: 25px;
+    position: relative;
+    width: 80%;
+    margin-bottom: 25px;
+}
+
+.hero-message a{
+    color: #007185;
 }
