--- a/style.css
+++ b/style.css
@@ -159,9 +159,15 @@ span{
 }
 .box-img{
     height: 300px;
+    background-size: cover;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 
 }
 .box-content{
     margin-left: 1rem;
     margin-right: 1rem;
+}
+.box-content p{
+    color: #007185;
 }
