--- a/style.css
+++ b/style.css
@@ -172,3 +172,10 @@ span{
 .box-content p{
     color: #007185;
 }
+.box-content h2 {
+    font-size: 1.2rem;
+    font-weight: bold;
+    white-space: normal;     /* Allow line breaks */
+    word-wrap: break-word;   /* Break long words if needed */
+    margin-bottom: 1rem; 
+}
