--- a/style.css
+++ b/style.css
@@ -181,8 +181,18 @@ span{
 }
 
 /**footer**/
-.foter-panel1{
+
+footer{
+    margin-top: 15px;
+}
+
+.foot-panel1{
     background-color: #37475a;
     color: white;
-    height: 40px
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.5rem;
+
 }
