--- a/style.css
+++ b/style.css
@@ -196,3 +196,23 @@ footer{
     font-size: 0.5rem;
 
 }
+.foot-panel2{
+   background-color: #222f3d;
+   color: white;
+   height: 500px;
+   display: flex;
+   justify-content: space-evenly;
+}
+
+ul{
+    margin-top: 10px;
+}
+ul a{
+    display: block;
+    font-size: 0.85rem;
+    margin-top: 10px;
+    color: #dddddd;
+}
+ul p{
+    font-weight: 700;
+}
