Update HTML and CSS File

--- a/style.css
+++ b/style.css
@@ -216,3 +216,8 @@ ul a{
 ul p{
     font-weight: 700;
 }
+.foot-panel3{
+    background-color: #222f3d;
+    color: white;
+    border-top:0.5px solid white;
+}
