--- a/style.css
+++ b/style.css
@@ -220,4 +220,14 @@ ul p{
     background-color: #222f3d;
     color: white;
     border-top:0.5px solid white;
+    height: 70px;
+    display: flex;
+    justify-content :center;
+    align-items: center;
+}
+.logo{
+    background-image: url("amazon_logo.png");
+    background-size: cover;
+    height: 50px;
+    width: 100px;
 }
