--- a/style.css
+++ b/style.css
@@ -231,3 +231,17 @@ ul p{
     height: 50px;
     width: 100px;
 }
+.foot-panel4{
+    background-color: #0f1111;
+    color: white;
+    height: 80px;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+}
+.pages{
+    font-size: 0.7rem;
+}
+.copyright{
+    font-size: 0.7 rem;
+}
