--- a/style.css
+++ b/style.css
@@ -237,11 +237,15 @@ ul p{
     height: 80px;
     /* display: flex;
     justify-content: center;
-    align-items: center; */
+    align-items: center; */ 
 }
 .pages{
     font-size: 0.7rem;
+    text-align: center;
+    padding-top: 25px;
 }
 .copyright{
-    font-size: 0.7 rem;
+    font-size: 0.7rem;
+    text-align: center;
+    padding-top: 5px;
 }
